More specific logging recommendations, update to latest report format.